// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Workspace Empty State - CardEmpty should render CardEmpty 1`] = `
<div>
  <div
    class="empty-card"
  >
    <svg
      class="lexicon-icon lexicon-icon-home icon-root"
      role="presentation"
    >
      <use
        href="#home"
      />
    </svg>
    <p>
      CardEmpty Description
    </p>
    <button
      class="btn btn-secondary"
      type="button"
    >
      CardEmpty Button Label
    </button>
  </div>
</div>
`;

exports[`Workspace Empty State should render 1`] = `
<div>
  <div
    class="empty-container row"
  >
    <div
      class="col-xl-6"
    >
      <div
        class="empty-card"
      >
        <svg
          class="lexicon-icon lexicon-icon-ac_integration icon-root"
          role="presentation"
        >
          <use
            href="#ac_integration"
          />
        </svg>
        <p>
          Do more with our Business & Enterprise Plans
        </p>
        <button
          class="btn btn-primary"
          type="button"
        >
          Contact Sales
        </button>
      </div>
    </div>
    <div
      class="col-xl-6"
    >
      <div
        class="empty-card"
      >
        <svg
          class="lexicon-icon lexicon-icon-ac_page_analytics icon-root"
          role="presentation"
        >
          <use
            href="#ac_page_analytics"
          />
        </svg>
        <p>
          90 Day Full Feature Trial
        </p>
        <a
          class="btn btn-secondary"
          href="/workspace/add/trial"
        >
          Start Free Trial
        </a>
      </div>
    </div>
  </div>
</div>
`;
